remove work process content

--- a/index.html
+++ b/index.html
@@ -396,8 +396,7 @@
 
       
       <div class="container section-title" data-aos="fade-up">
-        <h2>Work Process</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Work Process</h2> 
       </div> 
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -422,10 +421,10 @@
                     <i class="bi bi-check-circle"></i>
                     <span>Data Analysis</span>
                   </div>
-                  <div class="feature-item">
+               <!--   <div class="feature-item">
                     <i class="bi bi-check-circle"></i>
                     <span>User Feedback</span>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div> 
