include client section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Index - Sharon Gold Loan Software</title>
 <meta name="description" content="Sharon Gold Loan Software – Simplifying gold loan management with secure, efficient, and user-friendly solutions.">
-<meta name="keywords" content="Gold Loan Software, Gold Loan Management, Sharon Finance, Loan Against Gold, Financial Software, Gold Loan System, Digital pawn Broking Software, Money Lending">
+<meta name="keywords" content="Sharon Gold Loan Software, Gold Loan Software, Gold Loan Management, Sharon Finance, Loan Against Gold, Financial Software, Gold Loan System, Digital pawn Broking Software, Money Lending">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -95,7 +95,7 @@
             <p>Welcome to Sharon Finance and Software – your trusted partner in financial empowerment and technology solutions.</p>
             <div class="d-flex">
               <a href="#about" class="btn-get-started">Book Demo</a>
-              <a href="https://www.youtube.com/watch?v=diINa2yLZMI&t=125s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+              <a href="https://www.youtube.com/watch?v=diINa2yLZMI&t=2s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="200">
@@ -155,8 +155,8 @@
            <!-- <div class="swiper-slide"><img src="assets/img/clients/clients-3.webp" class="img-fluid" alt=""></div>-->
              <div class="swiper-slide"><img src="assets/img/clients/clients-4.webp" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/clients-5.webp" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/clients-1.webp" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/clients-2.webp" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/clients-7.webp" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/clients-6.webp" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/clients-4.webp" class="img-fluid" alt=""></div>
           </div> 
         </div>
@@ -638,11 +638,10 @@ details for loans from other banks, and track refinancing
 
     <!-- Team Section -->
     <section id="team" class="team section">
-
-      <!-- Section Title 
+ 
       <div class="container section-title" data-aos="fade-up">
-        <h2>Team</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Clients</h2>
+        <p> Our clients are at the heart of everything we do. We proudly serve a diverse range of businesses and individuals across the financial and service sectors.</p>
       </div> 
 
       <div class="container">
@@ -653,9 +652,9 @@ details for loans from other banks, and track refinancing
             <div class="team-member d-flex align-items-start">
               <div class="pic"><img src="assets/img/person/person-m-7.webp" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                <h4>SHIVAKAMI GOLD FINANCE</h4>
+                <span>Rajkumar VSN</span>
+                <p>1/1 MP Thottam,Chinnabommanayakan Palayam Pirivu, Tirupur -641603</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -670,9 +669,27 @@ details for loans from other banks, and track refinancing
             <div class="team-member d-flex align-items-start">
               <div class="pic"><img src="assets/img/person/person-f-8.webp" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+                <h4>CTS FINANCE</h4>
+                <span>Livish</span>
+                <p>Panavilai,Thuckalay-629175</p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""> <i class="bi bi-linkedin"></i> </a>
+                </div>
+              </div>
+            </div>
+          </div> 
+
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="team-member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/person/person-f-4.webp" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>SRIMAN BANKER</h4>
+                <span>M.Pandimahadhevan</span>
+                <p>W2 manthamman Kovil Street,Chinnaovulapuram village, Theni district</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -687,9 +704,9 @@ details for loans from other banks, and track refinancing
             <div class="team-member d-flex align-items-start">
               <div class="pic"><img src="assets/img/person/person-m-6.webp" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
+                <h4>AJ FINANCE</h4>
+                <span>Antony</span>
+                <p>8/39,OPP. Krishnan Kovil,Pavithiyan Vilai,Parassala-695502</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -699,37 +716,19 @@ details for loans from other banks, and track refinancing
               </div>
             </div>
           </div> 
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/person/person-f-4.webp" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""> <i class="bi bi-linkedin"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div> 
-
         </div>
 
       </div>
 
-    </section>  -->
+    </section>  
 
     <!-- Pricing Section -->
     <section id="pricing" class="pricing section light-background">
 
-      <!--  
+       
       <div class="container section-title" data-aos="fade-up">
         <h2>Pricing</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Choose a plan that fits your needs. Whether you're a small business or an established organization, we offer affordable and flexible pricing for all our software solutions.</p>
       </div> 
 
       <div class="container">
@@ -738,14 +737,20 @@ details for loans from other banks, and track refinancing
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item">
-              <h3>Free Plan</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h3>Basic Plan</h3>
+              <h4><sup>$</sup>12000 </h4>
               <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>				 
+                <li><i class="bi bi-check"></i> <span>Basic Setting</span></li>
+                <li><i class="bi bi-check"></i> <span>Pledge Module</span></li>
+               <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Receipt Details</span></li>
+				<li class="na"><i class="bi bi-x"></i> <span>Repledge Loan Details</span></li>				
+				 <li class="na"><i class="bi bi-x"></i> <span>Admin Dashboard</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Manage Depositor Details</span></li>				
+                <li class="na"><i class="bi bi-x"></i> <span>Accounting Statement</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Finance Statement</span></li>
+				
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
@@ -753,14 +758,18 @@ details for loans from other banks, and track refinancing
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-item featured">
-              <h3>Business Plan</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
-              <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li><i class="bi bi-check"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li><i class="bi bi-check"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+              <h3>Statndard Plan</h3>
+              <h4><sup>$</sup>18000<span>  </span></h4>
+              <ul> <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>	
+                <li><i class="bi bi-check"></i> <span>Basic Setting</span></li>
+                <li><i class="bi bi-check"></i> <span>Pledge Module</span></li>
+               <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>
+                <li><i class="bi bi-check"></i> <span>Receipt Details</span></li>
+				<li><i class="bi bi-check"></i> <span>Repledge Loan Details</span></li>				
+				 <li class="na"><i class="bi bi-x"></i> <span>Admin Dashboard</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Manage Depositor Details</span></li>				
+                <li class="na"><i class="bi bi-x"></i> <span>Accounting Statement</span></li>
+                <li class="na"><i class="bi bi-x"></i> <span>Finance Statement</span></li>
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
@@ -768,14 +777,18 @@ details for loans from other banks, and track refinancing
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item">
-              <h3>Developer Plan</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
-              <ul>
-                <li><i class="bi bi-check"></i> <span>Quam adipiscing vitae proin</span></li>
-                <li><i class="bi bi-check"></i> <span>Nec feugiat nisl pretium</span></li>
-                <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                <li><i class="bi bi-check"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li><i class="bi bi-check"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+              <h3>Pro Plan</h3>
+              <h4><sup>$</sup>25000<span> </span></h4>
+              <ul> <li><i class="bi bi-check"></i> <span>User Dashboard</span></li>	
+                         <li><i class="bi bi-check"></i> <span>Basic Setting</span></li>
+                <li><i class="bi bi-check"></i> <span>Pledge Module</span></li>
+               <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>
+                <li><i class="bi bi-check"></i> <span>Receipt Details</span></li>
+				<li><i class="bi bi-check"></i> <span>Repledge Loan Details</span></li>				
+				 <li><i class="bi bi-check"></i> <span>Admin Dashboard</span></li>
+                <li><i class="bi bi-check"></i> <span>Manage Depositor Details</span></li>				
+                <li><i class="bi bi-check"></i><span>Accounting Statement</span></li>
+                 <li><i class="bi bi-check"></i> <span>Finance Statement</span></li> 
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
@@ -785,7 +798,7 @@ details for loans from other banks, and track refinancing
 
       </div>
 
-    </section>  -->
+    </section>  
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
