Upload video file

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
             <p>Welcome to Sharon Finance and Software – your trusted partner in financial empowerment and technology solutions.</p>
             <div class="d-flex">
               <a href="#about" class="btn-get-started">Book Demo</a>
-              <a href="https://www.youtube.com/watch?v=diINa2yLZMI&t=2s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+			  <a href="assets/img/video/GoldloanSoftware.mp4" class="glightbox btn-watch-video d-flex align-items-center" data-type="video" data-source="local">
+ 
+          <i class="bi bi-play-circle"></i><span>Watch Video</span></a>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="200">
@@ -512,7 +514,7 @@
 
     </section><!-- /Call To Action Section -->
 
-    <!-- Portfolio Section -->
+   
     <section id="portfolio" class="portfolio section">
 
       
@@ -634,7 +636,7 @@ details for loans from other banks, and track refinancing
       </div>  
 
 
-    </section><!-- /Portfolio Section -->
+    </section>   
 
     <!-- Team Section -->
     <section id="team" class="team section">
