--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
             <p>Welcome to Sharon Finance and Software – your trusted partner in financial empowerment and technology solutions.</p>
             <div class="d-flex">
               <a href="#about" class="btn-get-started">Book Demo</a>
-			  <a href="assets/img/video/GoldloanSoftware.mp4" class="glightbox btn-watch-video d-flex align-items-center" data-type="video" data-source="local">
- 
-          <i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+			 <!-- <a href="assets/img/video/GoldloanSoftware.mp4" class="glightbox btn-watch-video d-flex align-items-center" data-type="video" data-source="local">  <i class="bi bi-play-circle"></i><span>Watch Video</span></a>-->
+ <a href="https://www.youtube.com/watch?v=diINa2yLZMI" target="_blank" rel="noopener" class="btn-watch-video d-flex align-items-center">  
+  <i class="bi bi-play-circle"></i><span>Watch Video</span>
+</a>
+         
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="200">
@@ -106,8 +108,7 @@
         </div>
       </div>
 
-    </section><!-- /Hero Section -->
-
+    </section>  
     <!-- Clients Section -->
     <section id="clients" class="clients section light-background">
 
