update portfolio images

--- a/index.html
+++ b/index.html
@@ -536,53 +536,53 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/portfolio/admnindashboard.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/admnindashboard.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Admin Dashboard</h4>
                 <p>Gain complete financial insights with a monthly transaction chart</p>
-                <a href="assets/img/portfolio/admnindashboard.png" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/admnindashboard.webp" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/portfolio/admindashboard1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/admindashboard1.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Admin Dashboard</h4>
                 <p>Track the number of customers and depositors, along with loan reports, income, and expense charts for better
 decision-making
 </p>
-                <a href="assets/img/portfolio/admindashboard1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/admindashboard1.webp" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a  title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/portfolio/userdashboard.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/userdashboard.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>User Dashboard</h4>
                 <p>Stay updated with real-time gold rates provided by the company and track loans
 that exceed the current amount
 </p>
-                <a href="assets/img/portfolio/userdashboard.png" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/userdashboard.webp" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a   title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/portfolio/rolemen.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/rolemen.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Assing Role and Set Previllege</h4>
                 <p>Manage essential company details effortlessly, including Finance Year, Branch
 Entry, and User Details,Role setting ensuring smooth operations and organization.
 </p>
-                <a href="assets/img/portfolio/rolemen.png" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/rolemen.webp" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a   title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/portfolio/customer_details.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/customer_details.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Customer Details</h4>
                 <p>Effortlessly manage and track customer details</p>
@@ -592,43 +592,43 @@ Entry, and User Details,Role setting ensuring smooth operations and organization
             </div> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/portfolio/pledge.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/pledge.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Pledge Receipt</h4>
                 <p>Generate essential Pledge documents</p>
-                <a href="assets/img/portfolio/pledge.png" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/pledge.webp" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a  title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/portfolio/auction.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/auction.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Auction Notice</h4>
                 <p>Generate Auction Notice</p>
-                <a href="assets/img/portfolio/auction.png" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/auction.webp" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a   title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/portfolio/partpayment.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/partpayment.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Part Payment</h4>
                 <p>Part Payment and Interest Calculation</p>
-                <a href="assets/img/portfolio/partpayment.png" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/partpayment.webp" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a  title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/portfolio/avala.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/avala.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Repledge Loan</h4>
                 <p>Verifgy jewelry availability, review interest
 details for loans from other banks, and track refinancing 
 </p>
-                <a href="assets/img/portfolio/avala.png" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/avala.webp" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a   title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div> 
