Remove unwanted image

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#about">Book Demo</a>
+      <a class="btn-getstarted" href="http://51.20.5.105:5000/">Demo</a>
 
     </div>
   </header>
@@ -96,7 +96,7 @@
             <h1>Better Solutions For Your Business</h1>
             <p>Welcome to Sharon Finance and Software – your trusted partner in financial empowerment and technology solutions.</p>
             <div class="d-flex">
-              <a href="#about" class="btn-get-started">Book Demo</a>
+              <a href="http://51.20.5.105:5000/" class="btn-get-started">Demo</a>
 			 <!-- <a href="assets/img/video/GoldloanSoftware.mp4" class="glightbox btn-watch-video d-flex align-items-center" data-type="video" data-source="local">  <i class="bi bi-play-circle"></i><span>Watch Video</span></a>-->
  <a href="https://www.youtube.com/watch?v=diINa2yLZMI" target="_blank" rel="noopener" class="btn-watch-video d-flex align-items-center">  
   <i class="bi bi-play-circle"></i><span>Watch Video</span>
