--- a/index.html
+++ b/index.html
@@ -749,8 +749,8 @@ details for loans from other banks, and track refinancing
                 <li><i class="bi bi-check"></i> <span>Basic Setting</span></li>
                 <li><i class="bi bi-check"></i> <span>Pledge Module</span></li>
                <li><i class="bi bi-check"></i><span> Pledge Statement</span></li>			   
-				<li class="na"><i class="bi bi-check"></i> <span>Repledge Loan Details</span></li>							
-				 <li class="na"><i class="bi bi-check"></i> <span>Admin Dashboard</span></li>
+				<li><i class="bi bi-check"></i> <span>Repledge Loan Details</span></li>							
+				 <li><i class="bi bi-check"></i> <span>Admin Dashboard</span></li>
                 <li class="na"><i class="bi bi-x"></i> <span>Receipt Details</span></li>	
                 <li class="na"><i class="bi bi-x"></i> <span>Manage Depositor Details</span></li>				
                 <li class="na"><i class="bi bi-x"></i> <span>Accounting Statement</span></li>
